--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
     "nodemailer": "^6.9.5",
-    "otp-generator": "^4.0.1",
     "redis": "^4.6.8",
     "socket.io": "^4.7.2",
     "typescript": "^5.2.2"
@@ -33,10 +32,13 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/nodemailer": "^6.4.10",
+    "@types/otp-generator": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
     "nodemon": "^3.0.1",
+    "otp-generator": "^4.0.1",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1"
   }
