--- a/server/package.json
+++ b/server/package.json
@@ -17,13 +17,16 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
     "redis": "^4.6.8",
     "socket.io": "^4.7.2",
@@ -37,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/nodemailer": "^6.4.10",
     "@types/otp-generator": "^4.0.0",
+    "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
