--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,8 @@
     "eslint-config-next": "13.4.19",
     "gsap": "^3.12.2",
     "next": "13.4.19",
+    "peer": "^1.0.1",
+    "peerjs": "^1.5.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,7 +36,8 @@
     "react-redux": "^8.1.2",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
