--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-media-recorder": "^1.6.6",
+    "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.2",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
