--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-media-recorder": "^1.6.6",
     "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.2",
+    "react-responsive": "^9.0.2",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
