--- a/client/package.json
+++ b/client/package.json
@@ -16,17 +16,22 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "20.5.7",
     "@types/react-dom": "18.2.7",
+    "@types/react-facebook-login": "^4.1.9",
+    "@types/react-simple-oauth2-login": "^0.5.4",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "emoji-mart": "^5.5.2",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "gsap": "^3.12.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
+    "next-auth": "^4.22.1",
     "peer": "^1.0.1",
     "peerjs": "^1.5.1",
     "postcss": "8.4.28",
@@ -36,6 +41,9 @@
     "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.2",
     "react-responsive": "^9.0.2",
+    "react-simple-oauth2-login": "^0.5.4",
+    "react-social-login-buttons": "^3.9.1",
+    "reactjs-social-login": "^2.6.2",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
