--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-media-recorder": "^1.6.6",
     "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.2",
