--- a/server/package.json
+++ b/server/package.json
@@ -6,15 +6,19 @@
   "type": "module",
   "scripts": {
     "build": "tsc ",
-    "dev": "nodemon  --watch src  -e ts --exec  ts-node-esm src/server.ts",
+    "dev": "nodemon   --watch src  -e   ts --exec  ts-node-esm src/server.ts",
+    "predebug": "npm-run-all build ",
+    "debug": "nodemon --inspect ",
     "format": "npm run prettier",
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "a": "  ts-node-esm src/server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.11",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -29,9 +33,11 @@
     "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
+    "npm-run-all": "^4.1.5",
     "peer": "^1.0.1",
     "redis": "^4.6.8",
     "socket.io": "^4.7.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2",
     "uuid": "^9.0.1"
   },
