--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.5",
     "npm-run-all": "^4.1.5",
     "peer": "^1.0.1",
