--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@svgr/webpack": "^8.1.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "20.5.7",
     "@types/react-dom": "18.2.7",
     "@types/react-facebook-login": "^4.1.9",
@@ -28,6 +29,7 @@
     "emoji-mart": "^5.5.2",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "file-saver": "^2.0.5",
     "gsap": "^3.12.2",
     "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
