--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "file-saver": "^2.0.5",
+    "framer-motion": "^10.16.15",
     "gsap": "^3.12.2",
     "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
