--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@types/node": "20.5.7",
     "@types/react-dom": "18.2.7",
     "@types/react-facebook-login": "^4.1.9",
+    "@types/react-infinite-scroller": "^1.2.5",
     "@types/react-simple-oauth2-login": "^0.5.4",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
@@ -41,6 +42,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroller": "^1.2.6",
     "react-media-recorder": "^1.6.6",
     "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.2",
