--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
     "framer-motion": "^10.16.15",
     "gsap": "^3.12.2",
     "jsonwebtoken": "^9.0.2",
-    "next": "13.4.19",
+    "next": "^14.1.3",
     "next-auth": "^4.22.1",
     "peer": "^1.0.1",
     "peerjs": "^1.5.1",
