--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "chit-chat-events": "^1.0.2",
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
