--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
     "axios": "^1.5.0",
     "emoji-mart": "^5.5.2",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.1.3",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.15",
     "gsap": "^3.12.2",
@@ -39,9 +39,9 @@
     "peer": "^1.0.1",
     "peerjs": "^1.5.1",
     "postcss": "8.4.28",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-infinite-scroll-component": "^6.1.0",
     "react-media-recorder": "^1.6.6",
