--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,10 @@
     "@types/react-dom": "18.2.7",
     "@types/react-facebook-login": "^4.1.9",
     "@types/react-simple-oauth2-login": "^0.5.4",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "chit-chat-events": "^1.0.3",
     "emoji-mart": "^5.5.2",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.1.3",
@@ -34,6 +36,7 @@
     "framer-motion": "^10.16.15",
     "gsap": "^3.12.2",
     "jsonwebtoken": "^9.0.2",
+    "link": "^2.1.0",
     "next": "^14.1.3",
     "next-auth": "^4.22.1",
     "peer": "^1.0.1",
