--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@svgr/webpack": "^8.1.0",
@@ -29,6 +31,8 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "chit-chat-events": "^1.0.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "emoji-mart": "^5.5.2",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.1.3",
@@ -37,8 +41,10 @@
     "gsap": "^3.12.2",
     "jsonwebtoken": "^9.0.2",
     "link": "^2.1.0",
+    "lucide-react": "^0.424.0",
     "next": "^14.1.3",
     "next-auth": "^4.22.1",
+    "next-themes": "^0.3.0",
     "peer": "^1.0.1",
     "peerjs": "^1.5.1",
     "postcss": "8.4.28",
@@ -55,7 +61,9 @@
     "react-social-login-buttons": "^3.9.1",
     "reactjs-social-login": "^2.6.2",
     "socket.io-client": "^4.7.2",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "uuid": "^9.0.1"
   },
