--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/server.js",
-  "type": "module",
   "scripts": {
     "build": "tsc ",
-    "dev": "nodemon   --watch src  -e   ts --exec  ts-node-esm src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only  src/server.ts",
     "predebug": "npm-run-all build ",
     "debug": "nodemon --inspect ",
     "format": "npm run prettier",
