--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "@types/uuid": "^9.0.8",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
-    "chit-chat-events": "^1.0.4",
+    "chit-chat-events": "link:/home/irfanki/Code Folder/Next js /Video-Conferencing-Web-Application/chit-chat-events",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "emoji-mart": "^5.5.2",
