--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,7 +65,8 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "wavesurfer.js": "^7.8.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
