--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
